added api up/downvotes
